--- a/.github/workflows/matricula.yml
+++ b/.github/workflows/matricula.yml
@@ -1,17 +1,15 @@
 name: Matricula
-run-name: Setting up the Matricula database
-on: [push]
+on:
+  push:
+    branches:
+      - main # or specify your branch
+
 jobs:
-  test-output:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Test Output
-      run: echo "Here is a test"
   connect-remote:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - name: Show databases
-      run: mysql -h ${{ secrets.DB_HOSTNAME }} --port 3306 -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} -e "SHOW DATABASES";
+      run: mysql -h ${{ secrets.DB_HOSTNAME }} -P 3306 -u ${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} -e "SHOW DATABASES";
     - name: Run a sample SQL on remote
-      run: mysql -h ${{ secrets.DB_HOSTNAME }} --port 3306 -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} -e "source guitess/Matricula.sql";
+      run: mysql -h ${{ secrets.DB_HOSTNAME }} -P 3306 -u ${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} -e "source D:/OneDrive/Área de Trabalho/FIEB/guitess/Matricula.sql";
