--- a/.github/workflows/matricula.yml
+++ b/.github/workflows/matricula.yml
@@ -1,15 +1,17 @@
 name: Matricula
-on:
-  push:
-    branches:
-      - main # or specify your branch
-
+run-name: Setting up the Matricula database
+on: [push]
 jobs:
+  test-output:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Test Output
+      run: echo "Here is a test"
   connect-remote:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Show databases
-      run: mysql -h ${{ secrets.DB_HOSTNAME }} -P 3306 -u ${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} -e "SHOW DATABASES";
+      run: mysql -h ${{ secrets.DB_HOSTNAME }} --port 3306 -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} -e "SHOW DATABASES";
     - name: Run a sample SQL on remote
-      run: mysql -h ${{ secrets.DB_HOSTNAME }} -P 3306 -u ${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} -e "source D:/OneDrive/Área de Trabalho/FIEB/guitess/Matricula.sql";
+      run: mysql -h ${{ secrets.DB_HOSTNAME }} --port 3306 -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} -e "source D:/OneDrive/Área de Trabalho/FIEB/guitess/Matricula.sql";
