--- a/.github/workflows/matricula.yml
+++ b/.github/workflows/matricula.yml
@@ -12,6 +12,12 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Show databases
-      run: mysql -h ${{ secrets.DB_HOSTNAME }} --port 3306 -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} -e "SHOW DATABASES";
-    - name: Run a sample SQL on remote
-      run: mysql -h ${{ secrets.DB_HOSTNAME }} --port 3306 -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} -e "source D:/OneDrive/Área de Trabalho/FIEB/guitess/Matricula.sql";
+    - name: Debug Connection
+      run: |
+        echo "DB_HOSTNAME: ${{ secrets.DB_HOSTNAME }}"
+        echo "DB_USER: ${{ secrets.DB_USER }}"
+        echo "DB_PASSWORD: ${{ secrets.DB_PASSWORD }}"
+
+#      run: mysql -h ${{ secrets.DB_HOSTNAME }} --port 3306 -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} -e "SHOW DATABASES";
+#    - name: Run a sample SQL on remote
+#      run: mysql -h ${{ secrets.DB_HOSTNAME }} --port 3306 -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} -e "source D:/OneDrive/Área de Trabalho/FIEB/guitess/Matricula.sql";
